kubernetes/application/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${APPLICATION_NAMESPACE}
  labels:
    app.kubernetes.io/part-of: ${KUBERNETES_APP_NAME}
